--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,18 @@
+
+# mysql docker container configuration
 mysql:
   datasource:
-    jdbc-url: jdbc:mysql://localhost:3306/gowtham_db
-    username: gowtham_dev_user1
-    password: todayFestival@26
+    jdbc-url: jdbc:mysql://localhost:3306/${MYSQL_DB_NAME}
+    username: ${MYSQL_DB_USER_NAME}
+    password: ${MYSQL_DB_PASS}
 
+
+# Postgres docker container configuration
 postgres:
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5484/gowtham_postgresdb
-    username: gowtham_dev_user2
-    password: todayFestival@269
+    jdbc-url: jdbc:postgresql://localhost:5484/${POSTGRES_DB_NAME}
+    username: ${POSTGRES_DB_USERNAME}
+    password: ${POSTGRES_DB_PASS}
 
 
 management:
@@ -20,5 +24,3 @@ management:
   endpoint:
     health:
       show-details: always
-
-
